--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -39,3 +39,18 @@ services:
       - POSTGRES_DB=users
     volumes:
       - ./db-data/postgres:/var/lib/postgresql/data
+
+  mongo:
+    image: 'mongo:latest'
+    ports:
+      - "27017:27017"
+    restart: always
+#    deploy:
+#      mode: replicated
+#      replicas: 1
+    environment:
+      - MONOGO_INITDB_DATABASE=logs
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    volumes:
+      - ./db-data/mongo:/data/db
