--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -25,6 +25,15 @@ services:
     environment:
       DSN: "host=postgres user=postgres password=postgres dbname=users port=5432 sslmode=disable timezone=UTC connect_timeout=5"
 
+  logger-service:
+    build:
+      context: ./../logger-service
+      dockerfile: ./../logger-service/logger-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+
   postgres:
     image: 'postgres:14.2'
     ports:
