--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -60,3 +60,10 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - ./db-data/mongo/:/data/db
+
+  mailhog:
+    image: 'mailhog/mailhog'
+    platform: linux/amd64/v8
+    ports:
+      - "1025:1025"
+      - "8025:8025"
