--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,6 +13,25 @@ services:
       mode: replicated
       replicas: 1
 
+  mailer-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MAIL_DOAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      MAIL_ENCRYPTION: none
+      MAIL_FROM_NAME: "Andre Lipandr"
+      MAIL_FROM_ADDRESS: "lipandr@me.com"
+
+
   logger-service:
     build:
       context: ./../logger-service
